--- a/templates/AdsCreate.html
+++ b/templates/AdsCreate.html
@@ -211,7 +211,7 @@
 <div class="container-xxl p-3 d-flex flex-column p-2 rounded border border-1 d-block bg-white">
     <div class="card-header bg-dark text-white h-25 text-center">
         <a href="/announce" class="d-block mx-auto">
-            <img class="img-fluid navbar-brand" id="categoryImage" alt="Logo" style="width: 8%; min-width: 60px;">
+            <img class="img-fluid navbar-brand" id="categoryImage" alt="Logo">
         </a>
         <h4 class="mb-0 tw-bold p-2 ">Let's Start. You are in 
             {% if ads_type in ads_category_map %}
